<resources>
    <string name="app_name">PsicoApp</string>
    <string name="ingresar">INGRESAR</string>
    <string name="email">Correo</string>
    <string name="ingreso">Ingreso</string>
    <string name="clave_de_acceso">Clave de Acceso</string>
    <string name="men">¡Hola </string>
    <string name="buttonej2">Mostrar&#10;Pacientes</string>
    <string name="buttonej1">Agregar&#10;Paciente</string>
    <string name="olvid_la_contrase_a">Olvidé la contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="registrarme2">REGISTRARME</string>
    <string name="nombrePA">Nombre</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="repita_contrase_a">Repita Contraseña</string>
    <string name="agregue_datos_del_paciente">Agregue datos del Paciente</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombrePa">Nombre</string>
    <string name="rutPa">Rut</string>
    <string name="n_mero_de_celularPa">Número de Celular</string>
    <string name="emailPa">Email</string>
    <string name="agregarPa">Agregar</string>
    <string name="cancelarPa">Cancelar</string>
    <string name="apellidoR">Apellidos</string>
    <string name="rutR">Rut</string>
    <string name="title_activity_home_drawer">HomeDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="atr_s">Atrás</string>
    <string name="ver_examenesPA">Ver Examenes</string>
    <string name="examen_del_paciente">Subir Examen del Paciente</string>
    <string name="addimagepa">addImagePA</string>
    <string name="cargar_fotoPA">Cargar Foto</string>
    <string name="guardar_fotoPA">Guardar Foto</string>
    <string name="subir_examen">Subir Examen</string>
    <string name="nombreFotosPA">Nombre</string>
    <string name="imagenpa">imagenPa</string>
    <string name="nombredeltextPadre">Nombre: </string>
    <string name="test_paciente">Test Paciente</string>
    <string name="agregar_paciente">Agregar\nPaciente</string>
    <string name="mostrar_pacientes">Mostrar\nPacientes</string>
    <string name="salir_de_sesi_n">Salir</string>
    <string name="que_haremos_hoyHome">¿Que haremos hoy?</string>
    <string name="registrarte">Registrarte</string>
    <string name="icon_user_login">Icon User Login</string>
    <string name="motivo_de_consulta">Motivo de Consulta</string>
    <string name="diagnostico">Diagnostico</string>
    <string name="nombre">Nombre</string>
    <string name="observaci_n">Observación</string>
    <string name="button_home_agregar_paciente">Button Home Agregar Paciente</string>
    <string name="button_home_mostrar_paciente">button_home_mostrar_paciente</string>
    <string name="button_home_salir">button_home_salir</string>
</resources>